--- a/index.css
+++ b/index.css
@@ -200,26 +200,26 @@ h4 {
 
 /* footer */
 .footer {
-  background-color: #000;
+  background-image: url(footerbg.jpg);
 }
 
 .footer a {
-  color: #fff;
+  color: black;
   text-decoration: none;
 }
 
 .footer a:hover {
-  color: #3b1919;
+  color: #42474c;
 }
 
 .footer h5,
 .footer h6 {
   font-weight: bold;
-  color: #fff;
+  color: #212529;
 }
 
 .footer p {
-  color: #bbb;
+  color: black;
 }
 
 .footer i {
@@ -227,13 +227,12 @@ h4 {
 }
 
 .footer i:hover {
-  color: #a34747;
+  color: #d64545ce;
 }
 
 .hr {
   border-color: #fff;
 }
-
 /* Media Queries */
 
 /* 360px - 575px */
