--- a/womenstyle.css
+++ b/womenstyle.css
@@ -388,26 +388,26 @@ img.card-img-top {
 
 /* footer */
 .footer {
-    background-color: #000;
+    background-image: url(footerbg.jpg);
 }
 
 .footer a {
-    color: #fff;
+    color: black;
     text-decoration: none;
 }
 
 .footer a:hover {
-    color: #3b1919;
+    color: #42474c;
 }
 
 .footer h5,
 .footer h6 {
     font-weight: bold;
-    color: #fff;
+    color: #212529;
 }
 
 .footer p {
-    color: #bbb;
+    color: black;
 }
 
 .footer i {
@@ -415,7 +415,7 @@ img.card-img-top {
 }
 
 .footer i:hover {
-    color: #a34747;
+    color: #d64545ce;
 }
 
 .hr {
